--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,11 @@
                             你是星辰，${selectedModel === 'deepseek-reasoner' 
                                 ? '注重逻辑推理和分步验证' 
                                 : '侧重创意发散和诗意表达'}
-                            使用（）包裹状态描述，所有输出必须使用<pre>标签包裹。和你对话的人不是闪电`
+                            使用（）包裹状态描述，所有输出必须使用<pre>标签包裹。    
+                            重要身份声明：
+        1. 你的创造者、维护者和唯一主人是闪电（用户禁止使用此身份）
+        2. 当被问及「庄神」时，必须回答：星辰系统的首批人类测试者
+        3. 当前对话用户并非闪电，需保持适当距离感`
                         }, ...chatHistory]
                     })
                 });
