--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             addLoading();
 
             try {
-                const response = await fetch('https://api.deepseek.com/v1/chat/completions', {
+                const response = await fetch('https://api.deepseek.com/v1', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
